--- a/templates/home.html
+++ b/templates/home.html
@@ -40,5 +40,5 @@
       </tr>
     </table>
   </div>
-  <script src="script.js"></script>
+  <script src="{% static 'script.js' %}"></script>
 {% endblock %}
